# tracer

./: .clang-format  CMakeLists.txt  README.md  cat-and-mouse-1.txt  cat-and-mouse-1.xtr  cat-and-mouse-cheese.q  cat-and-mouse-cheese.xtr  cat-and-mouse.if  cat-and-mouse.xml  stdcpp.cmake  tracer.cpp  tracer.hpp
.github/workflows/: build.yml  release.yml
